@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2006-2021 Talend Inc. - www.talend.com
+ * Copyright (C) 2006-2023 Talend Inc. - www.talend.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,6 +28,7 @@ import java.security.ProtectionDomain;
 import java.util.stream.Stream;
 
 import org.talend.sdk.component.classloader.ConfigurableClassLoader;
+import org.talend.sdk.component.runtime.reflect.JavaVersion;
 
 import lombok.NoArgsConstructor;
 
@@ -42,6 +43,38 @@ public final class Unsafes {
 
     static {
         Class<?> unsafeClass;
+        final int javaVersion = JavaVersion.major();
+        if (javaVersion > 8 && javaVersion < 17) {
+            try {
+                /**
+                 * Disable Access Warnings:
+                 *
+                 * <pre>
+                 * {@code
+                 * WARNING: An illegal reflective access operation has occurred
+                 * WARNING: Illegal reflective access by org.talend.sdk.component.runtime.manager.asm.Unsafes \
+                 * (file:/xxxx/component-runtime-manager-x.xx.x.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int)
+                 * WARNING: Please consider reporting this to the maintainers of org.talend.sdk.component.runtime.manager.asm.Unsafes
+                 * WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+                 * WARNING: All illegal access operations will be denied in a future release
+                }
+                 * </pre>
+                 */
+                Class unsafeClazz = Class.forName("sun.misc.Unsafe");
+                Field field = unsafeClazz.getDeclaredField("theUnsafe");
+                field.setAccessible(true);
+                Object unsafe = field.get(null);
+                Method putObjectVolatile =
+                        unsafeClazz.getDeclaredMethod("putObjectVolatile", Object.class, long.class, Object.class);
+                Method staticFieldOffset = unsafeClazz.getDeclaredMethod("staticFieldOffset", Field.class);
+                Class loggerClass = Class.forName("jdk.internal.module.IllegalAccessLogger");
+                Field loggerField = loggerClass.getDeclaredField("logger");
+                Long offset = (Long) staticFieldOffset.invoke(unsafe, loggerField);
+                putObjectVolatile.invoke(unsafe, loggerClass, offset, null);
+            } catch (Exception e) {
+                System.err.println("Disabling unsafe warnings failed: " + e.getMessage());
+            }
+        }
         try {
             unsafeClass = AccessController
                     .doPrivileged((PrivilegedAction<Class<?>>) () -> Stream
@@ -142,6 +175,8 @@ public final class Unsafes {
      * @param classLoader the classloader to use to define the proxy.
      * @param proxyName the class name to define.
      * @param proxyBytes the bytes of the class to define.
+     * @param <T> the Class type
+     *
      * @return the Class which got loaded in the classloader
      */
     public static <T> Class<T> defineAndLoadClass(final ClassLoader classLoader, final String proxyName,
